[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hh-apply"
version = "1.1.0"
description = "CLI-инструмент для автоматических откликов на вакансии hh.ru"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "hh-apply contributors"},
]
keywords = ["hh.ru", "headhunter", "job", "auto-apply", "automation", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business",
]

dependencies = [
    "patchright>=1.0.0",
    "pyyaml>=6.0",
    "click>=8.0",
    "rich>=13.0",
    "requests>=2.31.0",
    "InquirerPy>=0.3.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/nightmarovvv/hh-autoapply"
Repository = "https://github.com/nightmarovvv/hh-autoapply"
Issues = "https://github.com/nightmarovvv/hh-autoapply/issues"

[project.scripts]
hh-apply = "hh_apply.cli:main"

[tool.setuptools.packages.find]
include = ["hh_apply*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
